[package]
name = "scan_core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }

regex = "1.12.2"
mlua = { version = "0.11.4", features = ["lua54", "async", "send", "serde"] }
async-ssh2-tokio = "0.11.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
